crates/aranya-policy-lang/tests/snapshots/tests__parse_expression_error.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid operator
  |
1 | 3 + 7
  |   ^ found `+`
  |
help: you should use an arithmetic function
  |
1 - 3 + 7
1 + saturating_add(3, 7)
  |
1 - 3 + 7
1 + check_unwrap add(3, 7)
  |
